tests/snapshots/json__lastwake_history.snap
---
source: tests/json.rs
assertion_line: 190
expression: v
---
{
  "history": [
    {
      "time": "2025-04-01T07:45:12-07:00",
      "type": "wake"
    },
    {
      "time": "2025-04-15T22:10:05-07:00",
      "type": "sleep"
    },
    {
      "time": "2025-04-16T07:55:33-07:00",
      "type": "wake"
    },
    {
      "time": "2025-04-29T01:15:18-07:00",
      "type": "sleep"
    },
    {
      "time": "2025-04-29T08:22:44-07:00",
      "type": "wake"
    }
  ],
  "last_sleep": "2025-04-29T01:15:18-07:00",
  "last_wake": "2025-04-29T08:22:44-07:00",
  "wake_irq": {
    "device": "9-fasteoi acpi",
    "irq": "9"
  }
}
